--- a/app/src/main/res/layout/activity_customer_login.xml
+++ b/app/src/main/res/layout/activity_customer_login.xml
@@ -42,7 +42,7 @@
         app:srcCompat="@drawable/auto" />
 
     <EditText
-        android:id="@+id/driver_email"
+        android:id="@+id/customer_email"
         android:layout_width="349dp"
         android:layout_height="61dp"
         android:hint="Email ID"
@@ -57,7 +57,7 @@
         android:inputType="textEmailAddress" />
 
     <EditText
-        android:id="@+id/driver_pass"
+        android:id="@+id/cust_pass"
         android:layout_width="349dp"
         android:layout_height="61dp"
         android:layout_alignParentStart="true"
@@ -83,7 +83,6 @@
         android:paddingRight="10dp"
         android:text="Login"
         android:textColor="@android:color/black"
-        style="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored"
         />
 
     <Button
@@ -108,7 +107,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="279dp"
         android:layout_marginEnd="156dp"
-        android:text="Welcome Driver"
+        android:text="Welcome Customer"
         android:textAlignment="center"
         android:textColor="#FF5722"
         android:textSize="15dp"
