edit text color changed

--- a/app/src/main/res/layout/activity_driver_login.xml
+++ b/app/src/main/res/layout/activity_driver_login.xml
@@ -47,6 +47,7 @@
         android:layout_height="61dp"
         android:hint="Email ID"
         android:textColorHint="@android:color/white"
+        android:textColor="#ffffff"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -61,6 +62,7 @@
         android:layout_width="349dp"
         android:layout_height="61dp"
         android:layout_alignParentStart="true"
+        android:textColor="#ffffff"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="35dp"
         android:textColorHint="@android:color/white"
