--- a/app/src/main/res/layout/activity_customer_login.xml
+++ b/app/src/main/res/layout/activity_customer_login.xml
@@ -46,6 +46,7 @@
         android:layout_width="349dp"
         android:layout_height="61dp"
         android:hint="Email ID"
+        android:textColor="#ffffff"
         android:textColorHint="@android:color/white"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
@@ -65,6 +66,7 @@
         android:layout_marginStart="35dp"
         android:textColorHint="@android:color/white"
         android:hint="Password"
+        android:textColor="#ffffff"
         android:layout_marginBottom="257dp"
         android:ems="10"
         android:inputType="textPassword" />
