--- a/app/src/main/res/layout/activity_map__driver.xml
+++ b/app/src/main/res/layout/activity_map__driver.xml
@@ -4,24 +4,30 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+
     <fragment
         android:id="@+id/map"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
 
-    <Button
-        android:id="@+id/logout_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#359c5e"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:padding="8dp"
-        android:layout_margin="5dp"
-        android:text="LogOut"
-        android:textColor="#ffffff" />
+    </fragment>
+
+
+
+
+                <Button
+                    android:id="@+id/logout_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:layout_margin="5dp"
+                    android:text="LogOut"
+                    android:textColor="#ffffff" />
+
+
 
 </RelativeLayout>
