--- a/app/src/main/res/layout/activity_map__driver.xml
+++ b/app/src/main/res/layout/activity_map__driver.xml
@@ -5,29 +5,25 @@
     android:orientation="vertical">
 
 
-
     <fragment
         android:id="@+id/map"
         class="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
     </fragment>
 
 
-
-
-                <Button
-                    android:id="@+id/logout_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="8dp"
-                    android:layout_margin="5dp"
-                    android:text="LogOut"
-                    android:textColor="#ffffff" />
-
+    <Button
+        android:id="@+id/logout_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:padding="8dp"
+        android:text="LogOut"
+        android:textColor="#ffffff" />
 
 
 </RelativeLayout>
