--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/building"
-    tools:context=".com.example.uber_clone.Main_Handler.MainActivity">
+    tools:context=".com.example.UberClone.Main_Handler.MainActivity">
 
     <Button
         android:id="@+id/customer_btn"
@@ -16,10 +16,12 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="32dp"
         android:layout_marginBottom="113dp"
-        android:background="#F8130101"
+        android:background="@drawable/shape"
         android:paddingLeft="10dp"
         android:text="Customer"
-        android:textColor="#FDF9F8" />
+        android:textColor="#F50E0C0C" />
+
+
 
     <Button
         android:id="@+id/driver_btn"
@@ -30,7 +32,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="33dp"
         android:layout_marginBottom="115dp"
-        android:background="#E1F70E"
+        android:background="@drawable/shape"
         android:text="Driver"
         android:textColor="#340686" />
 
@@ -43,9 +45,10 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="31dp"
         android:background="#040C00"
+        android:fontFamily="monospace"
         android:paddingLeft="0dp"
-        android:paddingRight="0dp"
 
+        android:paddingRight="0dp"
         android:text="Rikshawala"
         android:textAlignment="center"
         android:textColor="#FFC107"
