--- a/app/src/main/res/layout/activity_map__customer.xml
+++ b/app/src/main/res/layout/activity_map__customer.xml
@@ -1,9 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".com.example.UberClone.customer.Map_Customer" />
+    android:id="@+id/driver_map"
+    android:orientation="vertical">
+
+
+    <fragment
+        android:id="@+id/map"
+        class="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
+
+    </fragment>
+
+
+    <Button
+        android:id="@+id/customer_logout_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="#FF5722"
+        android:padding="8dp"
+        android:text="LogOut"
+        android:textColor="#FC181717"
+        android:textColorHighlight="#F8093AEC"
+        android:textColorHint="#F80B5BE6"
+        android:textColorLink="#F7E90909" />
+
+
+</RelativeLayout>
