--- a/app/src/main/res/layout/activity_map__driver.xml
+++ b/app/src/main/res/layout/activity_map__driver.xml
@@ -7,7 +7,7 @@
 
 
     <fragment
-        android:id="@+id/map"
+        android:id="@+id/driver_map_fragment"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,7 +18,7 @@
 
 
     <Button
-        android:id="@+id/logout_btn"
+        android:id="@+id/driver_logout_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
