--- a/app/src/main/res/layout/activity_map__customer.xml
+++ b/app/src/main/res/layout/activity_map__customer.xml
@@ -2,12 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/driver_map"
+    android:id="@+id/customer_map"
     android:orientation="vertical">
 
 
     <fragment
-        android:id="@+id/map"
+        android:id="@+id/customer_map_fragment"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
